# scanlink-desktop

./: INTERNATIONALIZATION.md  MOBILE_INTEGRATION.md  SYSTEM_TRAY.md  USAGE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
scripts/: tauri-dev.js
src/: App.tsx  i18n.ts  i18next.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: nsis-hooks.nsh  postinst.sh  postrm.sh
src-tauri/src/: keyboard.rs  lib.rs  mdns_service.rs  models.rs  qr_service.rs  security.rs  storage.rs  websocket.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  sheet.tsx  switch.tsx
src/hooks/: index.ts  useTheme.ts
src/locales/en-US/: common.json
src/locales/pt-BR/: common.json
src/pages/: Home.tsx  Settings.tsx
src/store/: index.ts
