[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.42", features = ["full"] }
warp = "0.3"
rand = "0.8"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
local-ip-address = "0.6"
futures-util = "0.3"
chrono = "0.4"
enigo = { version = "0.6", features = ["wayland", "x11rb"] }
arboard = "3.4"
uuid = { version = "1.11", features = ["v4"] }
aes-gcm = "0.10"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
mdns-sd = "0.11"
directories = "5"
hostname = "0.4"
